--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "forum": "https://discourse.zendframework.com/c/questions/expressive"
     },
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "psr/container": "^1.0",
+        "psr/http-message": "^1.0.1",
+        "zendframework/zend-expressive-authentication": "^0.1 || ^1.0-dev || ^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
