--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,6 @@ pages:
     - index.md
     - Introduction: intro.md
 site_name: Component Name Goes Here
-site_description: 'Component Description goes here'
+site_description: 'HTTP Basic Authentication adapter for zend-expressive-authentication.'
 repo_url: 'https://github.com/zendframework/zend-expressive-authentication-basic'
 copyright: 'Copyright (c) 2017 <a href="http://www.zend.com/">Zend Technologies USA Inc.</a>'
