--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^7.1",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
-        "zendframework/zend-expressive-authentication": "^0.1 || ^0.2 || ^1.0.0-dev || ^1.0"
+        "zendframework/zend-expressive-authentication": "^0.3 || ^1.0.0-dev || ^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
