Prepare documentation for stable release
- Version documentation
- Provide full usage for package

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,10 @@
 docs_dir: docs/book
 site_dir: docs/html
 pages:
-    - index.md
-    - Introduction: intro.md
+    - Home: index.md
+    - Introduction: v1/intro.md
+    - "_hidden-legacy-page-links":
+      - "_intro": intro.md
 site_name: zend-expressive-authentication-basic
 site_description: 'HTTP Basic Authentication adapter for zend-expressive-authentication.'
 repo_url: 'https://github.com/zendframework/zend-expressive-authentication-basic'
-copyright: 'Copyright (c) 2017 <a href="http://www.zend.com/">Zend Technologies USA Inc.</a>'
