--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0.x-dev",
+            "dev-develop": "1.1.x-dev"
         },
         "zf": {
             "config-provider": "Zend\\Expressive\\Authentication\\Basic\\ConfigProvider"
